[package]
name = "fimg"
version = "0.4.51"
authors = ["bend-n <bend.n@outlook.com>"]
license = "MIT"
edition = "2024"
description = "fast image operations"
repository = "https://github.com/bend-n/fimg"
exclude = ["tdata", "benches/", ".gitignore"]
keywords = ["image", "affine", "scale", "drawing"]
categories = ["multimedia::images", "graphics"]

[dependencies]
mattr = "0.0.2"
png = { version = "0.18", features = ["unstable"], optional = true }
fontdue = { version = "0.7.3", optional = true }
vecto = "0.1.1"
umath = "0.0.7"
fr = { version = "0.1.1", package = "fer", optional = true }
slur = { version = "0.1.0", optional = true }
clipline = "0.4.0"
minifb = { version = "0.25.0", default-features = false, features = [
    "x11",
    "wayland",
], optional = true }
wgpu = { version = "0.19.1", default-features = false, optional = true }
atools = "0.1.9"
qwant = { version = "1.0.2", optional = true }
libc = "0.2.154"
hinted = { version = "1.0.0", features = ["nightly"] }
lower = "0.2.0"
array_chunks = "1.0.0"
car = "0.1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.53.0", features = [
    "Win32_System_Console",
], optional = true }

[dev-dependencies]
iai = { git = "https://github.com/bend-n/iai.git" }

[[bench]]
name = "overlays"
path = "benches/overlays.rs"
harness = false

[[bench]]
name = "drawing"
path = "benches/drawing.rs"
# harness = false

[[bench]]
name = "affine_transformations"
path = "benches/affine_transformations.rs"
harness = false

[[bench]]
name = "scaling"
path = "benches/scaling.rs"
harness = false

[[bench]]
name = "tile"
path = "benches/tile.rs"
harness = false

[features]
scale = ["fr"]
save = ["png"]
text = ["fontdue"]
blur = ["slur"]
term = ["qwant", "save", "scale", "windows"]
real-show = ["minifb", "text"]
default = ["save", "scale", "term"]
wgpu-convert = ["dep:wgpu"]

[profile.release]
debug = 2
opt-level = 3
lto = "thin"
incremental = true

[package.metadata.docs.rs]
all-features = true
